Added static CSSs & JSs. Created basic template for homeo

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,1 +1,21 @@
-Welcome to home!
+{% extends 'home/basic.html' %}
+
+{% block title %}Home{% endblock title %}
+
+{% block body %}
+<button class="btn btn-primary" type="button">Button</button>
+
+
+<button class="btn btn-icon btn-3 btn-primary" type="button">
+	<span class="btn-inner--icon"><i class="ni ni-bag-17"></i></span>
+	
+    <span class="btn-inner--text">With icon</span>
+    
+</button>
+
+
+<button class="btn btn-icon btn-2 btn-primary" type="button">
+	<span class="btn-inner--icon"><i class="ni ni-atom"></i></span>
+	
+</button>
+{% endblock body %}
