--- a/templates/home/basic.html
+++ b/templates/home/basic.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <img src="/docs/4.3/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+      <img src="/static/global/img/brand-logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
       <a class="navbar-brand" id="nav-title" href="/">Medium cart</a>
       <div class="collapse navbar-collapse" id="navbarContent">
         <ul class="navbar-nav mr-auto">
