--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -2,6 +2,11 @@
 
 {% block title %}Home{% endblock title %}
 
+{% block top %}
+<!-- Favicon -->
+<link rel="shortcut icon" type="image/png" href="/static/global/img/brand-logo.png"/>
+{% endblock top %}
+
 {% block body %}
 
 {% endblock body %}
