--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -8,5 +8,46 @@
 {% endblock top %}
 
 {% block body %}
-
+<div class="cards-body">
+    <div class="card">
+        <img class="card-thumbnail" src="/static/products/product1.png">
+        <h3 class="card-title">{{ product.title }}</h3>
+        <p class="card-description">{{ product.shortDesc }}</p>
+        <divider class="card-divider"></divider>
+        <button class="btn btn-primary add-to-cart" id="{{ product.id }}" onclick="addProduct(this.id)">Add to cart</button>
+        <button class="btn btn-secondary quick-view" id="{{ product.id }}" onclick="quickView(this.id)">Quick View</button>
+    </div>
+    <div class="card">
+        <img class="card-thumbnail" src="/static/products/product2.png">
+        <h3 class="card-title">{{ product.title }}</h3>
+        <p class="card-description">{{ product.shortDesc }}</p>
+        <divider class="card-divider"></divider>
+        <button class="btn btn-primary add-to-cart" id="{{ product.id }}" onclick="addProduct(this.id)">Add to cart</button>
+        <button class="btn btn-secondary quick-view" id="{{ product.id }}" onclick="quickView(this.id)">Quick View</button>
+    </div>
+    <div class="card">
+        <img class="card-thumbnail" src="/static/products/product3.png">
+        <h3 class="card-title">{{ product.title }}</h3>
+        <p class="card-description">{{ product.shortDesc }}</p>
+        <divider class="card-divider"></divider>
+        <button class="btn btn-primary add-to-cart" id="{{ product.id }}" onclick="addProduct(this.id)">Add to cart</button>
+        <button class="btn btn-secondary quick-view" id="{{ product.id }}" onclick="quickView(this.id)">Quick View</button>
+    </div>
+    <div class="card">
+        <img class="card-thumbnail" src="/static/products/product4.png">
+        <h3 class="card-title">{{ product.title }}</h3>
+        <p class="card-description">{{ product.shortDesc }}</p>
+        <divider class="card-divider"></divider>
+        <button class="btn btn-primary add-to-cart" id="{{ product.id }}" onclick="addProduct(this.id)">Add to cart</button>
+        <button class="btn btn-secondary quick-view" id="{{ product.id }}" onclick="quickView(this.id)">Quick View</button>
+    </div>
+    <div class="card">
+        <img class="card-thumbnail" src="/static/products/product5.png">
+        <h3 class="card-title">{{ product.title }}</h3>
+        <p class="card-description">{{ product.shortDesc }}</p>
+        <divider class="card-divider"></divider>
+        <button class="btn btn-primary add-to-cart" id="{{ product.id }}" onclick="addProduct(this.id)">Add to cart</button>
+        <button class="btn btn-secondary quick-view" id="{{ product.id }}" onclick="quickView(this.id)">Quick View</button>
+    </div>
+</div>
 {% endblock body %}
