Implemented logic for getting products from database & integrated currency api for rate conversions

--- a/templates/home/basic.html
+++ b/templates/home/basic.html
@@ -25,6 +25,7 @@
     <script src="/static/global/requires/js/argon-dashboard.js"></script>
     <script src="/static/global/requires/js/bootstrap.js"></script>
     <script src="/static/global/requires/js/argon.min.js"></script>
+    <script src="/static/global/js/tools.js"></script>
     <script src="/static/home/js/index.js"></script>
 
     {% block top %} {% endblock top %}
