--- a/templates/home/basic.html
+++ b/templates/home/basic.html
@@ -11,10 +11,12 @@
       rel="stylesheet"
       href="/static/global/requires/css/semantic.min.css"
     />
+    <!--
     <link
       rel="stylesheet"
       href="/static/global/requires/css/bootstrap.min.css"
     />
+    -->
     <link rel="stylesheet" href="/static/global/requires/css/argon.min.css" />
     <link rel="stylesheet" href="/static/home/css/index.css" />
     <link rel="stylesheet" href="/static/global/requires/css/navbar.css" />
@@ -23,7 +25,7 @@
     <!-- JS -->
     <script src="/static/global/requires/js/jquery.3.4.1.js"></script>
     <script src="/static/global/requires/js/argon-dashboard.js"></script>
-    <script src="/static/global/requires/js/bootstrap.js"></script>
+    <!-- <script src="/static/global/requires/js/bootstrap.js"></script> -->
     <script src="/static/global/requires/js/argon.min.js"></script>
     <script src="/static/global/js/tools.js"></script>
     <script src="/static/home/js/index.js"></script>
