Added basic template for user endpoint

--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -1,1 +1,6 @@
-Welcome to user!
+{% extends 'user/basic.html' %}
+
+{% block title %}Profile{% endblock title %}
+
+{% block body %}
+{% endblock body %}
