--- a/templates/user/basic.html
+++ b/templates/user/basic.html
@@ -19,7 +19,7 @@
     -->
     <link rel="stylesheet" href="/static/global/requires/css/argon.min.css" />
     <link rel="stylesheet" href="/static/global/css/cards.css" />
-    <link rel="stylesheet" href="/static/home/css/index.css" />
+    <link rel="stylesheet" href="/static/user/css/index.css" />
     <link rel="stylesheet" href="/static/global/requires/css/navbar.css" />
     <link rel="stylesheet" href="/static/global/requires/css/global.css" />
 
@@ -29,7 +29,7 @@
     <!-- <script src="/static/global/requires/js/bootstrap.js"></script> -->
     <script src="/static/global/requires/js/argon.min.js"></script>
     <script src="/static/global/js/tools.js"></script>
-    <script src="/static/home/js/index.js"></script>
+    <script src="/static/user/js/index.js"></script>
 
     {% block top %} {% endblock top %}
   </head>
