--- a/templates/home/basic.html
+++ b/templates/home/basic.html
@@ -19,6 +19,7 @@
     -->
     <link rel="stylesheet" href="/static/global/requires/css/argon.min.css" />
     <link rel="stylesheet" href="/static/global/css/cards.css" />
+    <link rel="stylesheet" href="/static/global/css/common.css" />
     <link rel="stylesheet" href="/static/home/css/index.css" />
     <link rel="stylesheet" href="/static/global/requires/css/navbar.css" />
     <link rel="stylesheet" href="/static/global/requires/css/global.css" />
@@ -30,6 +31,9 @@
     <script src="/static/global/requires/js/argon.min.js"></script>
     <script src="/static/global/js/tools.js"></script>
     <script src="/static/home/js/index.js"></script>
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="/static/global/img/brand-logo.png"/>
 
     {% block top %} {% endblock top %}
   </head>
