--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -3,4 +3,7 @@
 {% block title %}Profile{% endblock title %}
 
 {% block body %}
+<div class="container">
+    <img src="/static/img/unknownProfile.png" alt="" class="profile-image">
+</div>
 {% endblock body %}
