Designed some of the contact page

--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -3,7 +3,13 @@
 {% block title %}Profile{% endblock title %}
 
 {% block body %}
-<div class="container">
+<div class="profile">
     <img src="/static/img/unknownProfile.png" alt="" class="profile-image">
+    <div class="profile-name">
+        Yogesh Aggarwal
+    </div>
+    <div class="profile-email">
+        developeryogeshgit@gmail.com
+    </div>
 </div>
 {% endblock body %}
