--- a/static/global/requires/css/navbar.css
+++ b/static/global/requires/css/navbar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap');
+
 #nav-title {
   color: white;
   font-size: 16px;
@@ -17,4 +19,8 @@
 #search-box:focus,
 #search-box:hover {
   width: 400px;
+}
+
+.navbar {
+  font-family: 'Lexend Deca', sans-serif;  
 }
