Added POST request condition for contact

--- a/templates/contact/index.html
+++ b/templates/contact/index.html
@@ -9,14 +9,15 @@
 <form class="container" method="POST">
   {% csrf_token %}
   <div class="form-type">Full Name</div>
-  <input type="text" class="input" placeholder="Name" />
+  <input type="text" name="fullName" class="input" placeholder="Name" />
   <div class="form-type">Email address</div>
-  <input type="email" class="input" placeholder="Email" />
+  <input type="email" name="email" class="input" placeholder="Email" />
   <div class="form-type">Issue</div>
   <textarea
     type="text"
     class="input"
     id="textarea"
+    name="issue"
     placeholder="Describe your issue here..."
   ></textarea
   ><br />
