--- a/templates/contact/index.html
+++ b/templates/contact/index.html
@@ -6,7 +6,7 @@
   us.
 </div>
 
-<form class="container" method="POST">
+<form class="contact-form" method="POST">
   {% csrf_token %}
   <div class="form-type">Full Name</div>
   <input type="text" name="fullName" class="input" placeholder="Name" />
