--- a/static/global/css/common.css
+++ b/static/global/css/common.css
@@ -8,3 +8,20 @@
   color: white;
   background: dodgerblue;
 }
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(131, 131, 131);
+  border-radius: 25px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
