Added new app View for viewing the product

--- a/templates/contact/index.html
+++ b/templates/contact/index.html
@@ -1,4 +1,7 @@
-{% extends 'contact/basic.html' %} {% block title %}Contact{% endblock title %}
+{% extends 'contact/basic.html' %}
+
+{% block title %}Contact{% endblock title %}
+
 {% block body %}
 <div class="page-heading">Contact Us</div>
 <div class="description">
