--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -23,7 +23,9 @@
     {% endif %}
     <divider class="card-divider"></divider>
     <button class="btn btn-primary add-to-cart" id="{{ id.0 }}" onclick="addProduct(this.id)">Add to cart</button>
-    <button class="btn btn-secondary quick-view" id="{{ id.0 }}" onclick="quickView(this.id)">Quick View</button>
+    <a href="/view/{{ id.0 }}">
+      <button class="btn btn-secondary quick-view" id="{{ id.0 }}" onclick="quickView(this.id)">Quick View</button>
+    </a>
   </div>
 {% endfor %}
 </div>
