--- a/static/view/css/index.css
+++ b/static/view/css/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Bree+Serif|Cabin|Heebo|Lexend+Deca|Noto+Sans+JP|Noto+Serif|Nunito|PT+Sans+Caption|Roboto|Roboto+Slab&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Bree+Serif|Cabin|Heebo|Lexend+Deca|Noto+Sans+JP|Noto+Serif|Nunito|PT+Sans+Caption|Roboto|Roboto+Slab&display=swap");
 
 /*
 font-family: 'Roboto', sans-serif;
@@ -14,99 +14,129 @@ font-family: 'PT Sans Caption', sans-serif;
 */
 
 .image-view {
-    margin: 1.3% 3% 1.3% 3%;
-    padding: 20px 0 20px 0;
-    box-shadow: 0 0 10px rgb(184, 184, 184);
-    border-radius: 15px;
+  margin: 1.3% 3% 1.3% 3%;
+  padding: 20px 0 20px 0;
+  box-shadow: 0 0 10px rgb(184, 184, 184);
+  border-radius: 15px;
 }
 
 .image-view:hover {
-    box-shadow: 0 0 15px rgb(184, 184, 184);
+  box-shadow: 0 0 15px rgb(184, 184, 184);
 }
 
 .product-image {
-    height: 380px;
-    display: block;
-    margin: 0 auto;
+  height: 380px;
+  display: block;
+  margin: 0 auto;
 }
 
 .product-name {
-    font-family: 'Lexend Deca', sans-serif;
-    font-size: 20px;
-    font-weight: 600;
-    color: red;
-    display: inline;
-    margin: 1% 0 0 0;
+  font-family: "Lexend Deca", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  color: red;
+  display: inline;
+  margin: 1% 0 0 0;
 }
 
 .broughtBy {
-    font-size: 15px;
-    margin: 2px 0 0 0;
-    text-decoration: underline
+  font-size: 15px;
+  margin: 2px 0 0 0;
+  text-decoration: underline;
 }
 
 .owner-store-link {
-    color: #3e5283;
+  color: #3e5283;
 }
 
 .owner-store-link:hover {
-    color: #526aa5;
+  color: #526aa5;
 }
 
 .content-heading {
-    font-size: 18px;
-    font-family: 'Bree Serif', serif;
-    border-bottom: 2px solid #3e5283;
-    margin: 0 0 10px 0;
-    color: dodgerblue;
+  font-size: 18px;
+  font-family: "Bree Serif", serif;
+  border-bottom: 2px solid #3e5283;
+  margin: 0 0 10px 0;
+  color: dodgerblue;
 }
 
 .product-rating {
-    display: inline;
-    margin: 0 0 0 1%;
-    background: dodgerblue;
-    padding: 4px 7px 4px 7px;
-    border-radius: 8px;
-    color: white;
-    font-weight: 600;
-    box-shadow: 0 0 4px #3e5283;
+  display: inline;
+  margin: 0 0 0 1%;
+  background: dodgerblue;
+  padding: 4px 7px 4px 7px;
+  border-radius: 8px;
+  color: white;
+  font-weight: 600;
+  box-shadow: 0 0 4px #3e5283;
 }
 
 .product-rating:hover {
-    box-shadow: 0 0 6px #3e5283;
+  box-shadow: 0 0 6px #3e5283;
 }
 
 .product-price {
-    font-weight: 600;
-    margin: 7px 0 0 0;
-    font-size: 20px;
-    color: rgb(0, 165, 165);
-    text-shadow: 0 0 1px rgb(184, 184, 184);
-    display: inline;
+  font-weight: 600;
+  margin: 7px 0 0 0;
+  font-size: 20px;
+  color: rgb(0, 165, 165);
+  text-shadow: 0 0 1px rgb(184, 184, 184);
+  display: inline;
 }
 
 .product-price:hover {
-    text-shadow: 0 0 2px rgb(184, 184, 184);
+  text-shadow: 0 0 2px rgb(184, 184, 184);
 }
 
 .buyButton {
-    color: rgb(255, 255, 255);
-    border: none;
+  color: rgb(255, 255, 255);
+  border: none;
+  outline: none;
+  background: linear-gradient(to right, rgb(228, 0, 209), rgb(72, 99, 255));
+  padding: 7px 15px 7px 15px;
+  border-radius: 8px;
+  font-family: "Nunito", sans-serif;
+  font-size: 17px;
+  font-weight: 600;
+  margin: -4.5% 15% 0 0;
+  box-shadow: 0 0 7px rgb(190, 190, 190);
+  float: right;
+}
+
+.buyButton:focus {
+    box-shadow: 0 0 13px rgb(190, 190, 190);
     outline: none;
-    /* background: green; */
-    background: linear-gradient(to right, rgb(0, 187, 194), rgb(0, 190, 86));
-    padding: 7px 15px 7px 15px;
-    border-radius: 8px;
-    font-family: 'Nunito', sans-serif;
-    font-size: 17px;
-    font-weight: 600;
-    margin: -4.5% 4% 0 0;
-    box-shadow: 0 0 7px rgb(190, 190, 190);
-    float: right;
 }
 
 .buyButton:hover {
-    background: linear-gradient(to right, rgb(0, 159, 165), rgb(0, 173, 78));
-    box-shadow: 0 0 12px rgb(190, 190, 190);
-    color: rgb(255, 255, 255);
+  background: linear-gradient(to right, rgb(228, 0, 209), rgb(46, 77, 255));
+  box-shadow: 0 0 12px rgb(190, 190, 190);
+  color: rgb(255, 255, 255);
+}
+
+.addToCartButton {
+  color: rgb(255, 255, 255);
+  border: none;
+  outline: none;
+  background: linear-gradient(to right, rgb(0, 187, 194), rgb(0, 190, 86));
+  padding: 7px 15px 7px 15px;
+  border-radius: 8px;
+  font-family: "Nunito", sans-serif;
+  font-size: 17px;
+  font-weight: 600;
+  margin: -4.5% 3% 0 0;
+  box-shadow: 0 0 7px rgb(190, 190, 190);
+  float: right;
+}
+
+.addToCartButton:focus {
+    box-shadow: 0 0 13px rgb(190, 190, 190);
+    outline: none;
+}
+
+.addToCartButton:hover {
+  background: linear-gradient(to right, rgb(0, 159, 165), rgb(0, 173, 78));
+  box-shadow: 0 0 12px rgb(190, 190, 190);
+  color: rgb(255, 255, 255);
 }
