--- a/static/checkout/css/index.css
+++ b/static/checkout/css/index.css
@@ -75,6 +75,7 @@ font-family: 'Roboto Slab', serif;
   font-weight: 600;
   font-family: "Nunito", sans-serif;
   box-shadow: 0 0 8px rgb(192, 192, 192);
+  cursor: pointer;
 }
 
 #submitButton:hover,
