Added one more product and minor checkout changes

--- a/templates/checkout/index.html
+++ b/templates/checkout/index.html
@@ -36,3 +36,9 @@
     </form>
 </div>
 {% endblock body %}
+
+{% block bottom %}
+<script>
+localStorage.setItem("price", "{{ productPrice }}")
+</script>
+{% endblock bottom %}
