Doecified price for the payment & changes on intermediate page

--- a/templates/payment/index.html
+++ b/templates/payment/index.html
@@ -7,8 +7,8 @@
     <title>PayTM</title>
 </head>
 <body>
-    <h1>Redirecting you to the payment page...</h1>
-    <h3>Please do not go back or refresh this page.</h3>
+    <h1 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">Redirecting you to the payment page...</h1>
+    <h3 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">Please do not go back or refresh this page.</h3>
     <form method="post" action="https://securegw-stage.paytm.in/order/process" name="paytm">
         <table>
         <tbody>
