Handled payment/pay request error for GET request

--- a/templates/checkout/failed.html
+++ b/templates/checkout/failed.html
@@ -13,7 +13,7 @@
         Your order has been failed
     </div>
     <div class="fail-description">
-        Your order has been failed due to some error from payment merchant or may due to internet connectivity. Try placing the order after some time.
+        Your order has been failed due to some error either from payment merchant or may due to internet connectivity. Try placing the order after some time.
     </div>
 </div>
 {% endblock body %}
