--- a/templates/global/navbar.html
+++ b/templates/global/navbar.html
@@ -1,79 +1,56 @@
-<nav class="navbar navbar-horizontal navbar-expand-lg navbar-dark bg-default">
-  <div class="container">
-    <a class="navbar-brand" href="#">Default Color</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbar-default"
-      aria-controls="navbar-default"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbar-default">
-      <div class="navbar-collapse-header">
-        <div class="row">
-          <div class="col-6 collapse-brand">
-            <a href="index.html">
-              <img src=" ../../assets/img/brand/blue.png" />
-            </a>
-          </div>
-          <div class="col-6 collapse-close">
-            <button
-              type="button"
-              class="navbar-toggler"
-              data-toggle="collapse"
-              data-target="#navbar-default"
-              aria-controls="navbar-default"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span></span>
-              <span></span>
-            </button>
-          </div>
-        </div>
-      </div>
-
-      <ul class="navbar-nav ml-lg-auto">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Medium Cart - {% block titleBar %}{% endblock titleBar %}</title>
+  {% block topBar %}{% endblock topBar %}
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <img src="/static/global/img/brand-logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+    <a class="navbar-brand" id="nav-title" href="/">Medium cart</a>
+    <div class="collapse navbar-collapse" id="navbarContent">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="#">
-            <i class="ni ni-favourite-28"></i>
-            <span class="nav-link-inner--text d-lg-none">Discover</span>
-          </a>
+          <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="#">
-            <i class="ni ni-notification-70"></i>
-            <span class="nav-link-inner--text d-lg-none">Profile</span>
-          </a>
+          <a class="nav-link" href="/blog">Blog</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/about">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/contact">Contact Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/user">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/cart/">Cart</a>
         </li>
         <li class="nav-item dropdown">
-          <a
-            class="nav-link nav-link-icon"
-            href="#"
-            id="navbar-default_dropdown_1"
-            role="button"
-            data-toggle="dropdown"
-            aria-haspopup="true"
-            aria-expanded="false"
-          >
-            <i class="ni ni-settings-gear-65"></i>
-            <span class="nav-link-inner--text d-lg-none">Settings</span>
+          <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Category
           </a>
-          <div
-            class="dropdown-menu dropdown-menu-right"
-            aria-labelledby="navbar-default_dropdown_1"
-          >
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="">Category 1</a>
+            <a class="dropdown-item" href="">Category 2</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="">Category 3</a>
           </div>
         </li>
       </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" id="search-box" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+      </form>
     </div>
-  </div>
-</nav>
+  </nav>
+
+  {% block bodyBar %}{% endblock bodyBar %}
+</body>
+{% block bottomBar %}{% endblock bottomBar %}
+</html>
