--- a/templates/global/navbar.html
+++ b/templates/global/navbar.html
@@ -5,6 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Medium Cart - {% block titleBar %}{% endblock titleBar %}</title>
+
+  <!-- CSS -->
+  <link
+    rel="stylesheet"
+    href="/static/global/requires/css/semantic.min.css"
+  />
+  <!--
+  <link
+    rel="stylesheet"
+    href="/static/global/requires/css/bootstrap.min.css"
+  />
+  -->
+  <link rel="stylesheet" href="/static/global/requires/css/argon.min.css" />
+  <link rel="stylesheet" href="/static/global/css/cards.css" />
+  <link rel="stylesheet" href="/static/global/css/common.css" />
+  <link rel="stylesheet" href="/static/global/requires/css/navbar.css" />
+  <link rel="stylesheet" href="/static/global/requires/css/global.css" />
+
+  <!-- JS -->
+  <script src="/static/global/requires/js/jquery.3.4.1.js"></script>
+  <script src="/static/global/requires/js/argon-dashboard.js"></script>
+  <!-- <script src="/static/global/requires/js/bootstrap.js"></script> -->
+  <script src="/static/global/requires/js/argon.min.js"></script>
+  <script src="/static/global/js/tools.js"></script>
+  
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/png" href="/static/global/img/brand-logo.png"/>
+
   {% block topBar %}{% endblock topBar %}
 </head>
 <body>
