Added navbar to blog

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,1 +1,7 @@
-Welcome to blog!
+{% extends 'blog/basic.html' %}
+
+{% block title %}Blog{% endblock title %}
+
+{% block body %}
+Blog here
+{% endblock body %}
