--- a/templates/global/navbar.html
+++ b/templates/global/navbar.html
@@ -7,17 +7,9 @@
   <title>Medium Cart - {% block titleBar %}{% endblock titleBar %}</title>
 
   <!-- CSS -->
-  <link
-    rel="stylesheet"
-    href="/static/global/requires/css/semantic.min.css"
-  />
-  <!--
-  <link
-    rel="stylesheet"
-    href="/static/global/requires/css/bootstrap.min.css"
-  />
-  -->
+  <link rel="stylesheet" href="/static/global/requires/css/semantic.min.css" />
   <link rel="stylesheet" href="/static/global/requires/css/argon.min.css" />
+
   <link rel="stylesheet" href="/static/global/css/cards.css" />
   <link rel="stylesheet" href="/static/global/css/common.css" />
   <link rel="stylesheet" href="/static/global/requires/css/navbar.css" />
@@ -26,8 +18,8 @@
   <!-- JS -->
   <script src="/static/global/requires/js/jquery.3.4.1.js"></script>
   <script src="/static/global/requires/js/argon-dashboard.js"></script>
-  <!-- <script src="/static/global/requires/js/bootstrap.js"></script> -->
   <script src="/static/global/requires/js/argon.min.js"></script>
+
   <script src="/static/global/js/tools.js"></script>
   
   <!-- Favicon -->
@@ -79,6 +71,10 @@
   </nav>
 
   {% block bodyBar %}{% endblock bodyBar %}
+
+  <footer>
+    
+  </footer>
 </body>
 {% block bottomBar %}{% endblock bottomBar %}
 </html>
